# facial-expression-recognition

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/fer_model/: checkpoint  dataset.py  fer-model.index  image_cnn_train.py  predict_fer.py  utility_functions.py
