[tool.poetry]
name = "facial-expression-recognition"
version = "0.1.0"
description = "Machine learning model for classifying facial expressions"
authors = ["Sinead O'Doherty <sinead_k_doherty@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dlib = "^19.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
